--- a/css/common.css
+++ b/css/common.css
@@ -34,7 +34,10 @@ header {
     position: fixed;
     top: 0;
     width: 100%;
-    background: var(--color-theme);
+    background: linear-gradient(to right, var(--color-theme), var(--color-back-active));
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+    border-bottom: 2px solid #5df2d6;
 }
 
 nav>ul {
@@ -61,6 +64,8 @@ nav li.current-page a {
     color: var(--color-theme);
     background-color: var(--color-active);
     pointer-events: none;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
 }
 
 main {
@@ -101,11 +106,12 @@ main section {
 footer {
     position: fixed;
     bottom: 0px;
-    background: var(--color-theme);
+    background: linear-gradient(to right, var(--color-theme), var(--color-back-active));
     width: 100%;
     text-align: center;
     padding-top: 10px;
     padding-bottom: 10px;
+    border-top: 2px solid #5df2d6;
 }
 
 footer p {
@@ -115,6 +121,15 @@ footer p {
 
 main p {
     margin-bottom: 16px;
+}
+
+.button {
+    padding: 10px;
+    text-align: center;
+    border-radius: 10px;
+    background-color: #00594c;
+    color: white;
+    border: none;
 }
 
 
