--- a/css/pages/add-city.css
+++ b/css/pages/add-city.css
@@ -1,11 +1,11 @@
-#cityadded {
+#cityAdded {
     margin: 0 auto;
     display: block;
     padding: 10px;
     border-radius: 5px;
 }
 
-#addcity {
+#addCity {
     margin: 0 auto;
     display: block;
     border-radius: 5px;
@@ -14,41 +14,4 @@
 label {
     display: block;
     padding-bottom: 5px;
-}
-
-.messages {
-    margin: 35px;
-}
-
-#success {
-    margin: 20px auto;
-    width: 500px;
-    display: block;
-    background-color: #28a745;
-    color: white;
-    padding: 20px;
-    border-radius: 15px;
-    text-align: center;
-}
-
-#error {
-    margin: 20px auto;
-    width: 500px;
-    display: block;
-    background-color: #dc3545;
-    color: white;
-    padding: 20px;
-    border-radius: 15px;
-    text-align: center;
-}
-
-#warning {
-    margin: 20px auto;
-    width: 500px;
-    display: block;
-    background-color: #ffc107;
-    color: white;
-    padding: 20px;
-    border-radius: 15px;
-    text-align: center;
 }
